--- a/projet/composer.json
+++ b/projet/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": ">=5.5",
         "zendframework/zendframework": "~2.5",
-        "zf-commons/zfc-user": "dev-master"
+        "zf-commons/zfc-user": "dev-master",
+        "zendframework/zftool": "dev-master"
     }
 }
